--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,90 @@
-.container{
-    background-image: url(../resources/Banner\ Image.png),linear-gradient(#0f0f0fee , rgba(222, 217, 217, 0));;
+.container {
+    background-image: url(../resources/Banner\ Image.png), linear-gradient(#000000b6, rgba(92, 90, 90, 0.056));
+    ;
     background-repeat: no-repeat;
     width: 1320px;
     height: 600px;
-    
+
     /* background: linear-gradient(#302e2e80 , rgba(73, 71, 71, 0)); */
     background-blend-mode: overlay;
+    border-radius: 16px;
+    margin-top: 50px;
+    margin-left: 520px;
 }
-.banner-text{
+
+.banner-text {
     color: white;
+    margin-left: 350px;
+    /* margin-top: 177px; */
+    width: 632px;
+    height: 246px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.greeting {
+    padding-top: 15%;
+    font-size: 32px;
+    /* font-weight: 400; */
+    line-height: 40px;
+    /* margin-bottom: 5px; */
+    /* .merriweather-regular font-family: "Merriweather", serif; */
+    font-weight: 400;
+    font-style: normal;
+
+
+}
+
+.head-line {
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 95px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+    /* .merriweather-black font-family: "Merriweather", serif; */
+    font-weight: 900;
+    font-style: normal;
+
+}
+
+#discount {
+    margin-left: 750px;
+    margin-top: 120px;
+    width: 802px;
+    height: 806px;
+}
+
+.off {
+    color: red;
+    text-align: center;
+    font-size: 88px;
+    font-family: "Inter", sans-serif;
+}
+
+.deals {
+    margin-left: 200px;
+    line-height: 20px;
+    text-align: center;
+    color: rgb(255, 0, 0);
+    font-size: 23px;
+    font-family: "Inter", sans-serif;
+    width: 400px;
+    height: 30px;
+    font-weight: bold;
+    
+}
+
+.difference{
+    margin-left: 10px;
+    line-height: 10px;
+    text-align: center;
+    font-size: 48px;
+    font-family: "Inter", sans-serif;
+
+}
+
+.img-new Year{
+    
+    margin-top: 50px;
 }
