--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 .container {
     background-image: url(../resources/Banner\ Image.png), linear-gradient(#000000b6, rgba(92, 90, 90, 0.056));
-    ;
+
     background-repeat: no-repeat;
     width: 1320px;
     height: 600px;
@@ -72,10 +72,10 @@
     width: 400px;
     height: 30px;
     font-weight: bold;
-    
+
 }
 
-.difference{
+.difference {
     margin-left: 10px;
     line-height: 10px;
     text-align: center;
@@ -84,7 +84,89 @@
 
 }
 
-.img-new Year{
-    
-    margin-top: 50px;
+.night {
+    color: rgb(255, 255, 255);
+    font-size: 70px;
+    width: 550px;
+
+    font-family: "Merriweather", serif;
+    font-weight: 900;
+    font-style: normal;
+    margin-left: 14%;
+    margin-top: 14%;
+}
+
+.Party {
+    /* background-image: url(/resources/Vectorrr.png); linear-gradient(#000000b6, rgba(92, 90, 90, 0.056)); */
+    /* line-height: 10px; */
+    background-image: url(../resources/Vectorrr.png), linear-gradient(90.00deg, rgba(17, 17, 17, 0.904), rgba(173, 167, 167, 0.719));
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
+    border-radius: 16px;
+    width: 1320px;
+    height: 600px;
+    display: flex;
+    margin-left: 520px;
+    margin-top: 120px;
+}
+
+.party-paragraph {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 145%;
+    margin-left: 14%;
+
+    width: 700px;
+    height: 100px;
+}
+
+.calendar-pic {
+    width: 349.16px;
+    height: 464.65px;
+    margin-top: 70px;
+    margin-left: 10%;
+}
+
+.wish {
+    font-size: 18px;
+    background: none;
+    margin-left: 158px;
+    font-family: "Inter", sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+}
+
+.Value {
+    border-radius: 16px;
+    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1), rgba(255, 0, 0, 0) 100%);
+    width: 1320px;
+    height: 482px;
+    margin-top: 120px;
+    margin-left: 520px;
+
+    font-family: "Inter", sans-serif;
+    font-size: 18px;
+    padding-left: 10px;
+    /* padding-right: 100px; */
+
+}
+
+.Value-detaile {
+    width: 550px;
+    height: 168px;
+    line-height: 56px;
+    padding-top: 100px;
+    padding-left: 360px;
+    text-align: center;
+}
+
+.appeal {
+    width: 167px;
+    height: 56px;
+    font-family: "Inter", sans-serif;
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    font-size: 20px;
+    background: rgb(255, 0, 0);
+    margin-left: 575px;
+    margin-top: 20px;
 }
