--- a/styles/styles.css
+++ b/styles/styles.css
@@ -170,3 +170,146 @@
     margin-left: 575px;
     margin-top: 20px;
 }
+
+.offering {
+    display: flex;
+
+    align-items: start;
+}
+
+.offering {
+    width: 1320px;
+    /* height: 463px; */
+    margin-left: 520px;
+    margin-top: 120px;
+}
+
+.immolation {
+    color: rgb(255, 0, 0);
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.upcoming {
+    color: rgb(7, 2, 17);
+    font-family: "Inter", sans-serif;
+    font-size: 48px;
+}
+
+.products-review {
+    color: rgba(7, 2, 17, 0.6);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 33px;
+    width: 350px;
+}
+
+.image-container {
+    /* box-sizing: border-box; */
+}
+
+.date {
+    width: 126px;
+    height: 58px;
+    color: rgb(255, 0, 0);
+    font-size: 48px;
+    font-family: "Inter", sans-serif;
+}
+
+.guess {
+    color: rgba(7, 2, 17, 0.6);
+    width: 300px;
+
+}
+
+.shiba {
+    /* margin-left: 100px; */
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.information {
+    width: 500px;
+}
+
+.effectiveness {
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 24px;
+    margin-left: 370px;
+
+}
+
+.off-day {
+    font-family: Merriweather;
+    font-size: 72px;
+    margin-top: 15px;
+}
+
+.Check {
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    width: 1068px;
+    height: 96px;
+    margin-bottom: 20px;
+}
+
+.off-day {
+    width: 677px;
+    height: 91px;
+    margin-left: 195px;
+    margin-bottom: 28px;
+}
+
+.favor {
+    width: 1068px;
+    height: 260px;
+    margin-left: 637px;
+    margin-top: 120px;
+}
+
+
+.Percentage_Off {
+    /* margin-left: 500px; */
+}
+
+.styled-image {
+    /* background-image: url(/resources/Rectangle\ 2.png); */
+    /* background-repeat: no-repeat;
+    background-position: center bottom; */
+    /* display: flex; */
+    /* padding-right: 500px; */
+}
+
+.leady {
+    margin-left: 1390px;
+    /* position: absolute;
+    padding-top: -50px; */
+}
+
+
+.Percentage_Off {
+    margin-top: 18px;
+}
+
+.discount-icon {
+    position: absolute;
+    margin-left: 1240px;
+    margin-top: 72px;
+}
+
+.red {
+    margin-left: 500px;
+}
+
+.gift-box{
+    position: absolute;
+    margin-left: 500px;
+    margin-top: 10px;
+}
