--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 .container {
     background-image: url(../resources/Banner\ Image.png), linear-gradient(#000000b6, rgba(92, 90, 90, 0.056));
 
@@ -9,8 +8,10 @@
     /* background: linear-gradient(#302e2e80 , rgba(73, 71, 71, 0)); */
     background-blend-mode: overlay;
     border-radius: 16px;
+
+    /* margin-left: 520px; */
+    margin: 0 auto;
     margin-top: 50px;
-    margin-left: 520px;
 }
 
 .banner-text {
@@ -50,10 +51,12 @@
 }
 
 #discount {
-    margin-left: 750px;
+    /* margin-left: 750px; */
     margin-top: 120px;
     width: 802px;
     height: 806px;
+    margin: 0 auto;
+
 }
 
 .off {
@@ -107,8 +110,9 @@
     width: 1320px;
     height: 600px;
     display: flex;
-    margin-left: 520px;
+    margin-left: 300px;
     margin-top: 120px;
+    /* margin: auto; */
 }
 
 .party-paragraph {
@@ -142,7 +146,7 @@
     width: 1320px;
     height: 482px;
     margin-top: 120px;
-    margin-left: 520px;
+    margin-left: 300px;
 
     font-family: "Inter", sans-serif;
     font-size: 18px;
@@ -181,7 +185,7 @@
 .offering {
     width: 1320px;
     /* height: 463px; */
-    margin-left: 520px;
+    margin-left: 300px;
     margin-top: 120px;
 }
 
@@ -216,6 +220,11 @@
     color: rgb(255, 0, 0);
     font-size: 48px;
     font-family: "Inter", sans-serif;
+    margin-right: 180px;
+}
+
+.img-newyear {
+    margin-right: 165px;
 }
 
 .guess {
@@ -240,7 +249,7 @@
     color: rgb(7, 2, 17);
     font-family: Inter;
     font-size: 24px;
-    margin-left: 370px;
+    margin-left: 800px;
 
 }
 
@@ -259,12 +268,14 @@
     width: 1068px;
     height: 96px;
     margin-bottom: 20px;
+    margin-left: 400px;
+
 }
 
 .off-day {
     width: 677px;
     height: 91px;
-    margin-left: 225px;
+    margin-left: 650px;
     margin-bottom: 28px;
 }
 
@@ -275,9 +286,14 @@
     margin-top: 120px;
 }
 
+.day-Check {
+    /* margin-right: 300px; */
+    margin-top: 130px;
+}
+
 
 .Percentage_Off {
-    /* margin-left: 500px; */
+    padding-right: 500px;
 }
 
 .styled-image {
@@ -286,12 +302,15 @@
     background-position: center bottom; */
     /* display: flex; */
     /* padding-right: 500px; */
-    margin-left: 30px;
+    /* margin-right: 50px; */
+    margin: 0 auto;
+
     margin-top: 30px;
 }
 
 .leady {
-    margin-left: 1390px;
+    margin-left: 1200px;
+    margin-bottom: -20px;
     /* position: absolute;
     padding-top: -50px; */
 }
@@ -303,24 +322,24 @@
 
 .discount-icon {
     position: absolute;
-    margin-left: 1240px;
+    margin-left: 1050px;
     margin-top: 72px;
 }
 
 .red {
-    margin-left: 500px;
+    margin-left: 310px;
 }
 
 .gift-box {
     position: absolute;
-    margin-left: 500px;
+    margin-left: 300px;
     margin-top: 10px;
 }
 
 .gift-ideas {
     width: 1320px;
     height: 1163px;
-    margin-left: 529px;
+    margin-left: 300px;
 }
 
 .gifts-heading {
@@ -339,7 +358,7 @@
     margin-top: 6px;
 }
 
-.portfolio-description{
+.portfolio-description {
     font-size: 25px;
     color: rgba(7, 2, 17, 0.6);
     font-weight: 400;
@@ -347,11 +366,94 @@
     margin-top: 3px;
 }
 
-.best-gifts-container{
+.best-gifts-container {
     text-align: left;
 }
 
-.grid-container{
+.grid-container {
     display: grid;
-    grid-template-columns:1fr 2fr 3fr;
+    grid-template-columns: 1fr 2fr 3fr;
+    width: 1320px;
+    max-height: 1163px;
+    ;
+    grid-gap: 1em;
+}
+
+#Subscribe {
+    background-color: rgba(255, 0, 0, 0.05);
+    max-width: 1305px;
+    height: 616px;
+    margin-left: 530px;
+    margin-left: 300px;
+
+}
+
+.email {
+    margin-left: 570px;
+    margin-top: 105px;
+    padding-top: 80px;
+}
+
+.Subscribe-heading {
+    margin-left: 430px;
+    width: 512px;
+    height: 60px;
+    font-size: 52px;
+    font-weight: 900;
+    font-family: "Merriweather", serif;
+}
+
+.Subscribe-description {
+    width: 896px;
+    height: 64px;
+    text-align: center;
+    padding-left: 212px;
+    width: 896px;
+    font-size: 20px;
+    color: rgba(7, 2, 17, 0.6);
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+
+}
+
+.subscribe-containert-from {
+    margin-left: 500px;
+    padding: 10px;
+    border: 2px;
+    width: 100%;
+
+}
+
+label{
+    position: right;
+}
+
+input {
+    width: 648px;
+    height: 78px;
+    border: none;
+    border-radius: 50px;
+    padding-left: 30px;
+    margin-top: 45px;
+    margin-left: 300px;
+    outline: none;
+}
+
+button {
+    width: 210px;
+    height: 78px;
+    background-color: red;
+    border-radius: 0px 50px 50px 0px;
+    border: none;
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    font-family: "Inter", sans-serif;
+    position: absolute;
+    margin-top: 45px;
+    /* top: 0;
+    right: 0;
+    bottom: 0; */
+    margin-left: -200px;
+    
+   
 }
