--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+*{
+    margin: ;
+    padding: 0;
+}
 .container {
     background-image: url(../resources/Banner\ Image.png), linear-gradient(#000000b6, rgba(92, 90, 90, 0.056));
 
@@ -459,18 +463,19 @@ button {
 }
 
 .footer-section {
-    background-color: rgb(233, 99, 99);
+    background: rgb(7, 2, 17);
     /* width: 1600px; */
     height: 609px;
     /* margin-left: 100px;
     display: flex; */
+    margin-top: 120px;
 }
 
 .section-tile {
     width: 375px;
-    height: 80px;
+    /* height: 80px;
     padding-left: 140px;
-    padding-top: 120px;
+    padding-top: 120px; */
     color: #ffffff;
     font-size: 24px;
     /* margin-block: 100px; */
@@ -483,12 +488,12 @@ button {
 }
 
  .content{
-    padding-left: 1500px;
-    margin-top: -270px;
+    /* padding-left: 1500px;
+    margin-top: -270px; */
     display: flex;
     color: #ffffff;
     font-size: 24px;
-    margin-block: 216px;
+    /* margin-block: 216px; */
 }
 
 .right{
@@ -498,12 +503,12 @@ button {
 }
 
 .web{
-    margin-left: 1500px;
+    /* margin-left: 1500px; */
     color: white;
     display: flex;
-    margin-top: 16px;
+    /* margin-top: 16px; */
     font-size: 24px;
-    margin-block: -290px;
+    /* margin-block: -290px; */
 }
 
 
@@ -534,4 +539,24 @@ button {
 
 .h{
     border: 1px solid rgba(255, 255, 255, 0.15);
+    width: 1320px;
+}
+
+.right-reserved{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 140px;
+    margin-right: 140px;
+    color: rgb(255, 255, 255);
+    font-size: 24px;
+    font-family: "Merriweather", serif;
+}
+
+.first-footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
+    padding-bottom: 50px;
+    margin-left: 40px;
 }
